fix(head): don't truncate titles on hero level 2 and 3

--- a/components/hero/src/Hero.module.scss
+++ b/components/hero/src/Hero.module.scss
@@ -25,11 +25,14 @@ $hero-breakpoint-sm: 769px;
   .title {
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     margin: 10px 0 24px;
     // NOTE: This gets rid of the next line high characters
     line-height: 1.4em;
+
+    &--truncated {
+      -webkit-line-clamp: 2;
+    }
 
     &::after {
       // NOTE: Fix the next slide being visible
